# grype.bzl

./: BUILD  MODULE.bazel  README.md  go.mod  grype.bzl
examples/aspect/: .bazelrc  BUILD  MODULE.bazel  README.md
examples/hermetic/: BUILD  MODULE.bazel  README.md  go.mod  go.sum
examples/hermetic/patches/: BUILD  grype.patch
examples/simple/: BUILD  MODULE.bazel  README.md
grype/: BUILD  cve_policy.bzl  database.bzl  defs.bzl  extensions.bzl  grype_check.sh  versions.bzl
grype/toolchain/: toolchain.bzl
